NG 1.4:
-Report all error arpwatch can detect via the standard report modes
 thanks to Russ Starr for suggesting
o New are
"bogon",
"ether broadcast",
"ether mismatch",
"ether too short",
"ether bad format",
"ether wrong type_ip",
"ether bad length",
"ether wrong op",
"ether wrong RARP",
"ether wrong type",
o this could mean breakage with old arpwatch operation!
-Make report mode 2 output of actions parseable by using "," as delimiter
-Remove ethercodes.dat.old - unused legacy
-Update ethercodes.dat from nmap-4.11
-Further static'fy local functions

NG 1.3:
-Buggy internal version only

NG 1.2:
-Fix make install target: man-pages will be installed now, too
 thanks to Aleksandr Shubnik
-Update ethercodes.dat from nmap-4.00

NG 1.1:
-Fix and update man-page to reflect the NG changes
-Add new feature: -P pcap_filter to use tcpdump-style filters
 thanks to John P. Rouillard for suggesting a filtering facility
-Improve error handling for pcap_compile() to print expression
-Small \n error-msg fix

NG 1.0:
-Fix small typo in man-page
-Allow getopt() to complain about unknown options (remove opterr=0)
-Rework help output and print to stdout, not stderr

DROP10:
-Fix longstanding and unnoticed BUG:
when running in default/daemon mode arp.dat was not checkpointed and as 
such never updated.

DROP9:
-Update ethercodes.dat from nmap-3.93
-Fix usage output; -t is for mailto, not -m (thanks to Jan Ostrochovsky)
-Add -F as mailfrom option (as everybody wants it; kudos Jan Ostrochovsky)
-Change CHECKPOINT (write arp DB to file) time to 3*60 seconds, was 10*60
-Change mkdep to also use mktemp if tempfile fails

DROP8:
-New configure option "--enable-fancy-mac" so MAC adresses are printed always
in xx:xx:.. notation e.g. 00:0a: instead of 0:0a

DROP7:
-Continue merging of Debian patches
o 11opt_sendmail_path: specify sendmail prog path
o 14opt_mailto: specify mailto address
o 15opt_username: drop privileges to this username (without restart)
